# ChangeLog for eclass directory
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.1721 2015/07/19 10:46:47 johu Exp $

  19 Jul 2015; Johannes Huber <johu@gentoo.org> kde4-base.eclass:
  Cleanup SRC_URIs.

  18 Jul 2015; Mike Gilbert <floppym@gentoo.org> distutils-r1.eclass:
  Add entire python directory to SANDBOX_PREDICT, bug 554252.

  17 Jul 2015; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  mozconfig-v6.38.eclass, mozconfig-v6.39.eclass:
  Updated gstreamer dependencies to current stable and dropped gst-plugins-mad
  since gst-plugins-libav now officially provides mp3 decoding

  17 Jul 2015; Brian Evans <grknight@gentoo.org> depend.php.eclass:
  Remove deprecated functions from depend.php.eclass as announced 30 days ago

  17 Jul 2015; Brian Evans <grknight@gentoo.org> -php-common-r1.eclass,
  -php-ext-base-r1.eclass, -php-ezc.eclass:
  Drop old, unused eclasses wrt bug 551910

  17 Jul 2015; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  mozconfig-v6.38.eclass, mozconfig-v6.39.eclass:
  Added gst-plugins-mad:1.0 dependency for USE=gstreamer to ensure mp3
  streaming support

  16 Jul 2015; Ian Stakenvicius (_AxS_) <axs@gentoo.org> mozlinguas.eclass:
  minor update within mozlinguas.eclass

  16 Jul 2015; Ian Stakenvicius (_AxS_) <axs@gentoo.org> mozlinguas.eclass:
  Fixed the mozlinguas.eclass upgrade, recommitting.

  16 Jul 2015; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  mozconfig-v6.38.eclass, mozconfig-v6.39.eclass, mozcoreconf-v3.eclass,
  mozextension.eclass, mozlinguas.eclass:
  Update mozilla support eclasses

  16 Jul 2015; Michał Górny <mgorny@gentoo.org> distutils-r1.eclass:
  Forbid also installing "examples" package, bug #555038.

  16 Jul 2015; Lars Wendler <polynomial-c@gentoo.org> apache-2.eclass:
  Added slot dependency for openssl. Raised minimum required EAPI version to 5.

  15 Jul 2015; Andreas K. Huettel <dilfridge@gentoo.org> kde4-meta.eclass: