@@ -1,6 +1,10 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.1721 2015/07/19 10:46:47 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.1722 2015/07/19 15:46:03 mpagano Exp $
+
+  19 Jul 2015; Mike Pagano <mpagano@gentoo.org> kernel-2.eclass:
+  Change kernel upgrade http link and remove reference to deblob in elog
+  message. See bug #553484
 
   19 Jul 2015; Johannes Huber <johu@gentoo.org> kde4-base.eclass:
   Cleanup SRC_URIs.
